<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customColorPrimary"
    tools:context=".ui.register.RegisterActivity">

    <EditText
        android:id="@+id/edittext_username_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/edit_username"
        android:inputType="textPersonName"
        android:background="@drawable/rounted_edittext_register"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_email_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounted_edittext_register"
        android:ems="10"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_username_register"
        app:layout_constraintStart_toStartOf="@+id/edittext_username_register"
        app:layout_constraintTop_toBottomOf="@+id/edittext_username_register" />

    <EditText
        android:id="@+id/edittext_password_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounted_edittext_register"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_email_register"
        app:layout_constraintStart_toStartOf="@+id/edittext_email_register"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email_register" />

    <EditText
        android:id="@+id/edittext_confirm_password_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounted_edittext_register"
        android:ems="10"
        android:hint="@string/edit_confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_password_register"
        app:layout_constraintStart_toStartOf="@+id/edittext_password_register"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password_register" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_clear_storage"
        app:layout_constraintTop_toBottomOf="@+id/edittext_confirm_password_register" />

    <Button
        android:id="@+id/button_clear_storage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_clear"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_register"
        app:layout_constraintEnd_toStartOf="@+id/button_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_login_back_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_back_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />
</androidx.constraintlayout.widget.ConstraintLayout>